Javadocs and reordering of functions