@@ -1,16 +1,5 @@
 package io.github.mikepapadim;
 
-///usr/bin/env jbang "$0" "$@" ; exit $?
-//JAVA 20
-//COMPILE_OPTIONS --enable-preview -source 20 --add-modules=jdk.incubator.vector
-//RUNTIME_OPTIONS --enable-preview --add-modules=jdk.incubator.vector
-//NATIVE_OPTIONS  --enable-preview --add-modules=jdk.incubator.vector --initialize-at-build-time=Llama2 -Dllama2.VectorAPI=false
-
-/* Inference for Llama-2 Transformer model in pure Java */
-
-// ----------------------------------------------------------------------------
-// Transformer model
-
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -23,25 +12,118 @@ import uk.ac.manchester.tornado.api.TaskGraph;
 import uk.ac.manchester.tornado.api.TornadoExecutionPlan;
 import uk.ac.manchester.tornado.api.enums.DataTransferMode;
 
+/**
+ * This class provides an implementation of the Llama-2 neural network model in {@link https://github.com/mukel/llama2.java},
+ * extended to offload the computational heavy parts on heterogeneous devices using TornadoVM.
+ * It includes methods for generating text, tokenization, and sampling.
+ * Additionally, it offers four different execution modes, one using the Vector API, and three TornadoVM modes,
+ * with Vector4, Vector8 and Vector16 types.
+ */
 class Llama2 {
 
-    // ----------------------------------------------------------------------------
-    // neural net blocks; the dynamics of the Transformer
+    /**
+     * Static variables that represent the different execution modes.
+     * By default the Vector API is enabled, but this can be configured through the respective system properties.
+     */
     static final boolean USE_VECTOR_API = getBooleanProperty("VectorAPI", true);
-    static final boolean USE_VECTORFLOAT16 = getBooleanProperty("VectorFloat16", false);
-    static final boolean USE_VECTORFLOAT8 = getBooleanProperty("VectorFloat8", false);
     static final boolean USE_VECTORFLOAT4 = getBooleanProperty("VectorFloat4", false);
+    static final boolean USE_VECTORFLOAT8 = getBooleanProperty("VectorFloat8", false);
+    static final boolean USE_VECTORFLOAT16 = getBooleanProperty("VectorFloat16", false);
 
     private static boolean getBooleanProperty(String propertyName, boolean defaultValue) {
         return "true".equalsIgnoreCase(System.getProperty("llama2." + propertyName, String.valueOf(defaultValue)));
     }
 
-    // The Byte Pair Encoding (BPE) Tokenizer that translates strings <-> tokens
+    // ============= Utility functions =============
 
+    /**
+     * Creates the appropriate TornadoVM execution plan based on the selected execution mode (i.e.,
+     * VectorFloat4, VectorFloat8, VectorFloat16).
+     *
+     * @param transformer The Transformer model used for sequence generation.
+     * @return The TornadoVM execution plan for the specified execution mode
+     */
+    private static TornadoExecutionPlan createTornadoExecutionPlan(Transformer transformer) {
+        Config p = transformer.config;
+        Weights w = transformer.weights;
+        RunState s = transformer.state;
+        int dim = p.dim;
+        TaskGraph taskGraph;
+        if (USE_VECTORFLOAT8) {
+            taskGraph = new TaskGraph("s0") //
+                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat8) //
+                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat8)//
+                    .task("t0", MatrixVectorCollection::matrixVectorFloat8, s.logits, s.xVectorFloat8, w.weightInVectorFloat8, dim, transformer.config.vocab_size) //
+                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
+        } else if (USE_VECTORFLOAT16) {
+            taskGraph = new TaskGraph("s0") //
+                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat16) //
+                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat16) //
+                    .task("t0", MatrixVectorCollection::matrixVectorFloat16, s.logits, s.xVectorFloat16, w.weightInVectorFloat16, dim, transformer.config.vocab_size) //
+                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
+        } else if (USE_VECTORFLOAT4) {
+            taskGraph = new TaskGraph("s0") //
+                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat4) //
+                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat4) //
+                    .task("t0", MatrixVectorCollection::matrixVectorFloat4, s.logits, s.xVectorFloat4, w.weightInVectorFloat4, dim, transformer.config.vocab_size) //
+                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
+        } else {
+            taskGraph = new TaskGraph("s0") //
+                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.x) //
+                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInFloatArray) //
+                    .task("t0", MatrixVectorCollection::matrixVectorSimple, s.logits, s.x, w.weightInFloatArray, dim, transformer.config.vocab_size) //
+                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
+        }
+
+        return new TornadoExecutionPlan(taskGraph.snapshot());
+    }
+
+    /**
+     * Function used for benchmarking that returns the model speed.
+     *
+     * @return Returns the model speed in milliseconds.
+     */
+    static long time_in_ms() {
+        return System.nanoTime() / 1_000_000;
+    }
+
+    /**
+     * Used for printing the printable characters and whitespaces.
+     *
+     * @param piece The tokens to be printed.
+     */
+    static void safe_printf(String piece) {
+        if (piece == null || piece.isEmpty()) {
+            return;
+        }
+
+        if (piece.length() == 1) {
+            char ch = piece.charAt(0);
+            boolean isPrintable = (32 <= ch && ch < 127);
+            if (!(isPrintable || Character.isWhitespace(ch))) {
+                return;
+            }
+        }
+
+        System.out.print(piece);
+    }
+
+    //============= Computation =============
+
+    /**
+     * Byte Pair Encoding (BPE) Tokenizer that translates strings to tokens, considering the previous
+     * token in the sequence. It performs additional processing to handle specific cases, such as stripping
+     * leading whitespace after a Beginning of Sentence (BOS) token or decoding raw byte tokens.
+     *
+     * @param t            The Tokenizer containing the vocabulary and necessary decoding information.
+     * @param prev_token   The token preceding the current token in the sequence.
+     * @param token        The token to decode.
+     * @return             The decoded string representation of the token, considering the context
+     *                    of the previous token and handling special cases like raw byte tokens.
+     */
     static String decode(Tokenizer t, int prev_token, int token) {
         String piece = t.vocab[token];
         // following BOS (1) token, sentencepiece decoder strips any leading whitespace
-        // (see PR #89)
         if (prev_token == 1 && piece.charAt(0) == ' ') {
             piece = piece.substring(1);
         }
@@ -51,43 +133,39 @@ class Llama2 {
         if (piece.length() == 6 && piece.startsWith(prefix) && piece.endsWith(suffix)) {
             String hex2 = piece.substring(prefix.length(), prefix.length() + 2);
             char ch = (char) Integer.parseInt(hex2, 16);
-            // ok this token is a raw byte token, carefuly to only print printable chars or
-            // whitespace
-            // some of the other bytes can be various control codes, backspace, etc. => skip
+            // only print printable chars or whitespace, excluding control codes, backspace, etc.
             piece = Character.toString(ch);
         }
         return piece;
     }
 
-    static void safe_printf(String piece) {
-        // piece might be a raw byte token, and we only want to print printable chars or
-        // whitespace
-        // because some of the other bytes can be various control codes, backspace, etc.
-        if (piece == null) {
-            return;
-        }
-        if (piece.isEmpty()) {
-            return;
-        }
-        if (piece.length() == 1) {
-            char ch = piece.charAt(0);
-            boolean isPrintable = (32 <= ch && ch < 127);
-            if (!(isPrintable || Character.isWhitespace(ch))) {
-                return;
-            }
-        }
-        System.out.print(piece);
-    }
-
+    /**
+     * Efficiently finds the perfect match for a given string in a sorted vocabulary.
+     *
+     * @param str           The string to look up in the vocabulary.
+     * @param sorted_vocab  A map representing the sorted vocabulary, where keys are strings and
+     *                      values are corresponding indices.
+     * @return              The index of the exact match in the vocabulary, or -1 if not found.
+     */
     static int str_lookup(String str, Map<String, Integer> sorted_vocab) {
-        // efficiently find the perfect match for str in vocab, return its index or -1
-        // if not found
         return sorted_vocab.getOrDefault(str, -1);
     }
 
+    /**
+     * Encodes a given text into a sequence of tokens using the provided Tokenizer, with optional
+     * Beginning of Sentence (BOS) and End of Sentence (EOS) tokens.
+     *
+     * @param t         The Tokenizer containing the vocabulary and scoring information.
+     * @param text      The text to be encoded into tokens.
+     * @param bos       A boolean indicating whether to prepend a BOS token (true) or not (false).
+     * @param eos       A boolean indicating whether to append an EOS token (true) or not (false).
+     * @param tokens    An array preallocated to store the resulting sequence of tokens.
+     * @return          The number of tokens in the encoded sequence.
+     *
+     * @throws          RuntimeException if the input text is null.
+     */
     static int encode(Tokenizer t, String text, boolean bos, boolean eos, int[] tokens) {
-        // encode the string text (input) into an upper-bound preallocated tokens[]
-        // array
+
         // bos != 0 means prepend the BOS token (=1), eos != 0 means append the EOS
         // token (=2)
         if (text == null) {
@@ -112,9 +190,7 @@ class Llama2 {
             tokens[n_tokens++] = 1;
         }
 
-        // so prepend a dummy prefix token to the input string, but only if text != ""
-        // TODO: pretty sure this isn't correct in the general case but I don't have the
-        // energy to read more of the sentencepiece code to figure out what it's doing
+        // prepend a dummy prefix token to the input string, but only if text != ""
         if (!"".equals(text)) {
             int dummy_prefix = str_lookup(" ", t.sorted_vocab);
             tokens[n_tokens++] = dummy_prefix;
@@ -180,191 +256,17 @@ class Llama2 {
         return n_tokens;
     }
 
-    // ----------------------------------------------------------------------------
-    // utilities: time / rng
+    // Sampling can be done in a few ways: greedy argmax, sampling, top-p sampling
 
-    static long time_in_ms() {
-        // return time in milliseconds, for benchmarking the model speed
-        return System.nanoTime() / 1_000_000;
-    }
-
-    private static TornadoExecutionPlan createTornadoExecutionPlan(Transformer transformer) {
-        Config p = transformer.config;
-        Weights w = transformer.weights;
-        RunState s = transformer.state;
-        int dim = p.dim;
-        TaskGraph taskGraph;
-        if (USE_VECTORFLOAT8) {
-            taskGraph = new TaskGraph("s0") //
-                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat8) //
-                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat8)//
-                    .task("t0", MatrixVectorCollection::matrixVectorFloat8, s.logits, s.xVectorFloat8, w.weightInVectorFloat8, dim, transformer.config.vocab_size) //
-                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-        } else if (USE_VECTORFLOAT16) {
-            taskGraph = new TaskGraph("s0") //
-                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat16) //
-                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat16) //
-                    .task("t0", MatrixVectorCollection::matrixVectorFloat16, s.logits, s.xVectorFloat16, w.weightInVectorFloat16, dim, transformer.config.vocab_size) //
-                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-        } else if (USE_VECTORFLOAT4) {
-            taskGraph = new TaskGraph("s0") //
-                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat4) //
-                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat4) //
-                    .task("t0", MatrixVectorCollection::matrixVectorFloat4, s.logits, s.xVectorFloat4, w.weightInVectorFloat4, dim, transformer.config.vocab_size) //
-                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-        } else {
-            taskGraph = new TaskGraph("s0") //
-                    .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.x) //
-                    .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInFloatArray) //
-                    .task("t0", MatrixVectorCollection::matrixVectorSimple, s.logits, s.x, w.weightInFloatArray, dim, transformer.config.vocab_size) //
-                    .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-        }
-
-        return new TornadoExecutionPlan(taskGraph.snapshot());
-    }
-
-    // ----------------------------------------------------------------------------
-    // generation loop
-    static void generate(Transformer transformer, Tokenizer tokenizer, Sampler sampler, String prompt, int steps) {
-        String empty_prompt = "";
-        if (prompt == null) {
-            prompt = empty_prompt;
-        }
-
-        // encode the (string) prompt into tokens sequence
-        int num_prompt_tokens = 0; // the total number of prompt tokens
-        int[] prompt_tokens = new int[prompt.length() * 2 + 3]; // +3 for '\0', ?BOS, ?EOS
-        num_prompt_tokens = encode(tokenizer, prompt, true, false, prompt_tokens);
-        if (num_prompt_tokens < 1) {
-            System.err.println("something is wrong, expected at least 1 prompt token");
-            System.exit(1);
-        }
-
-        ArrayList<TornadoExecutionPlan> te = new ArrayList<>();
-        // = createTornadoExecutionPlan(transformer);
-
-        // for (int i = 0; i < transformer.config.n_layers; i++) {
-        // TaskGraph taskGraph0 = new TaskGraph("sx" +
-        // i).transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xb) //
-        // .transferToDevice(DataTransferMode.FIRST_EXECUTION,
-        // w.weightsAsPrimitivesQ.get(i), w.weightsAsPrimitivesK.get(i),
-        // w.weightsAsPrimitivesV.get(i))
-        // .task("t1", MatrixVectorCollection::matrixVectorFloat8, s.q, s.xb,
-        // w.weightsAsPrimitivesQ.get(i), dim, dim) //
-        // .task("t2", MatrixVectorCollection::matrixVectorFloat8, s.k, s.xb,
-        // w.weightsAsPrimitivesK.get(i), dim, kv_dim) //
-        // .task("t3", MatrixVectorCollection::matrixVectorFloat8, s.v, s.xb,
-        // w.weightsAsPrimitivesV.get(i), dim, kv_dim) //
-        // .transferToHost(DataTransferMode.EVERY_EXECUTION, transformer.state.q,
-        // transformer.state.k, transformer.state.v);//
-        // te.add(new TornadoExecutionPlan(taskGraph0.snapshot()));
-        // } // Create the TornadoVM execution plan
-
-        te.add(createTornadoExecutionPlan(transformer));
-
-        long start = 0; // used to time our code, only initialized after first iteration
-        int next; // will store the next token in the sequence
-        int token = prompt_tokens[0]; // kick off with the first token in the prompt
-        int pos = 0; // position in the sequence
-        while (pos < steps) {
-            // forward the transformer to get logits for the next token
-            float[] logits = InferenceEngine.forward(transformer, token, pos, te);
-
-            // Advance the state machine
-            next = (pos < num_prompt_tokens - 1) ? prompt_tokens[pos + 1] : sample(sampler, logits);
-            pos++;
-
-            // data-dependent terminating condition: the BOS (=1) token delimits sequences
-            if (next == 1) {
-                break;
-            }
-
-            // print the token as string, decode it with the Tokenizer object
-            String piece = decode(tokenizer, token, next);
-            safe_printf(piece);
-
-            System.out.flush();
-            token = next;
-
-            // init the timer here because the first iteration can be slower
-            if (start == 0) {
-                start = time_in_ms();
-            }
-        }
-
-        System.out.println();
-
-        // report achieved tok/s (pos-1 because the timer starts after first iteration)
-        if (pos > 1) {
-            long end = time_in_ms();
-            System.err.printf("\nachieved tok/s: %f\n", (pos - 1) / (double) (end - start) * 1000);
-        }
-    }
-
-    // private static TornadoExecutionPlan createTornadoExecutionPlan(Transformer
-    // transformer) {
-    // Config p = transformer.config;
-    // Weights w = transformer.weights;
-    // RunState s = transformer.state;
-    // int dim = p.dim;
-    // TaskGraph taskGraph = null;
-    //
-    // if (USE_VECTORFLOAT8) {
-    // taskGraph = new TaskGraph("s0") //
-    // .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat8) //
-    // .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat8)//
-    // .task("t0", MatrixVectorCollection::matrixVectorFloat8, s.logits,
-    // s.xVectorFloat8, w.weightInVectorFloat8, dim, p.vocab_size) //
-    // .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-    // } else if (USE_VECTORFLOAT16) {
-    // taskGraph = new TaskGraph("s0") //
-    // .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat16) //
-    // .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat16)
-    // //
-    // .task("t0", MatrixVectorCollection::matrixVectorFloat16, s.logits,
-    // s.xVectorFloat16, w.weightInVectorFloat16, dim, p.vocab_size) //
-    // .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-    // } else if (USE_VECTORFLOAT4) {
-    // taskGraph = new TaskGraph("s0") //
-    // .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.xVectorFloat4) //
-    // .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInVectorFloat4)
-    // //
-    // .task("t0", MatrixVectorCollection::matrixVectorFloat4, s.logits,
-    // s.xVectorFloat4, w.weightInVectorFloat4, dim, p.vocab_size) //
-    // .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-    // } else {
-    // taskGraph = new TaskGraph("s0") //
-    // .transferToDevice(DataTransferMode.EVERY_EXECUTION, s.x) //
-    // .transferToDevice(DataTransferMode.FIRST_EXECUTION, w.weightInFloatArray) //
-    // .task("t0", MatrixVectorCollection::matrixVectorSimple, s.logits, s.x,
-    // w.weightInFloatArray, dim, p.vocab_size) //
-    // .transferToHost(DataTransferMode.EVERY_EXECUTION, s.logits);
-    // }
-    //
-    // // ArrayList<TornadoExecutionPlan> te = new ArrayList<>();
-    // // te.add(new TornadoExecutionPlan(taskGraph.snapshot()));
-    //
-    // return new TornadoExecutionPlan(taskGraph.snapshot());
-    // }
-
-    static int sample_argmax(float[] probabilities, int n) {
-        // return the index that has the highest probability
-        int max_i = 0;
-        float max_p = probabilities[0];
-        for (int i = 1; i < n; i++) {
-            if (probabilities[i] > max_p) {
-                max_i = i;
-                max_p = probabilities[i];
-            }
-        }
-        return max_i;
-    }
-
-    // ----------------------------------------------------------------------------
-    // sampling can be done in a few ways: greedy argmax, sampling, top-p sampling
-
+    /**
+     * Samples an index from an array of probabilities.
+     *
+     * @param probabilities An array of probabilities. The sum of all probabilities must be 1.
+     * @param n             The number of elements in the probabilities array.
+     * @param coin          A random value between 0 and 1 used for sampling.
+     * @return              The index sampled based on the provided probabilities.
+     */
     static int sample_mult(float[] probabilities, int n, float coin) {
-        // sample index from probabilities (they must sum to 1!)
         float cdf = 0.0f;
         for (int i = 0; i < n; i++) {
             cdf += probabilities[i];
@@ -375,12 +277,27 @@ class Llama2 {
         return n - 1; // in case of rounding errors
     }
 
+    /**
+     * Swaps two elements from a specified array.
+     *
+     * @param array    The array for which the elements will be swapped.
+     * @param from     The index of the first element to be swapped.
+     * @param to       The index of the second element to be swapped.
+     */
     static void swap(int[] array, int from, int to) {
         int tmp = array[from];
         array[from] = array[to];
         array[to] = tmp;
     }
 
+    /**
+     * Performs a sift-down on a specified integer array.
+     *
+     * @param array      The integer array on which the sift-down will be performed.
+     * @param from       The index from which to start the sift-down operation.
+     * @param n          The number of elements.
+     * @param comparator The comparator to determine the order of elements.
+     */
     static void siftDown(int[] array, int from, int n, Comparator<Integer> comparator) {
         int prev = from,next;
         while ((next = 2 * prev + 1) < n) {
@@ -397,11 +314,19 @@ class Llama2 {
         }
     }
 
+    /**
+     * Performs top-p sampling (or "nucleus sampling") to sample from a set of tokens
+     * that exceed a certain probability threshold (topp). This method ensures that tokens
+     * with very low probabilities are less likely to be sampled.
+     *
+     * @param probabilities The array of probabilities for each token.
+     * @param n             The number of tokens.
+     * @param topp          The probability threshold for sampling.
+     * @param indices       An array to store the indices of the sampled tokens.
+     * @param coin          A random number in [0, 1), usually obtained from random_f32().
+     * @return              The index of the sampled token.
+     */
     static int sample_topp(float[] probabilities, int n, float topp, int[] indices, float coin) {
-        // top-p sampling (or "nucleus sampling") samples from the smallest set of
-        // tokens that exceed probability topp. This way we never sample tokens that
-        // have very low probabilities and are less likely to go "off the rails".
-        // coin is a random number in [0, 1), usually from random_f32()
         Comparator<Integer> comparator = Comparator.<Integer>comparingDouble(i -> probabilities[i]).reversed();
 
         int head = 0;
@@ -451,8 +376,34 @@ class Llama2 {
         return indices[last_idx]; // in case of rounding errors
     }
 
+    /**
+     * Uses greedy argmax sampling to return the index of the token with the highest probability.
+     *
+     * @param probabilities The array of probabilities for each token.
+     * @param n             The number of tokens.
+     * @return              The index of the token with the highest probability.
+     */
+    static int sample_argmax(float[] probabilities, int n) {
+        // return the index that has the highest probability
+        int max_i = 0;
+        float max_p = probabilities[0];
+        for (int i = 1; i < n; i++) {
+            if (probabilities[i] > max_p) {
+                max_i = i;
+                max_p = probabilities[i];
+            }
+        }
+        return max_i;
+    }
+
+    /**
+     * Samples a token based on the given logits and sampler parameters.
+     *
+     * @param sampler The sampler configuration containing temperature and other hyperparameters.
+     * @param logits  The array of logits representing the unnormalized probability distribution.
+     * @return  The sampled token index.
+     */
     static int sample(Sampler sampler, float[] logits) {
-        // sample the token given the logits and some hyperparameters
         int next;
         if (sampler.temperature == 0.0f) {
             // greedy argmax sampling: take the token with the highest probability
@@ -478,8 +429,83 @@ class Llama2 {
         return next;
     }
 
+    /**
+     * Generates a sequence of tokens using the provided Transformer model, Tokenizer, Sampler, and input prompt.
+     *
+     * @param transformer The Transformer model used for sequence generation.
+     * @param tokenizer   The Tokenizer for encoding and decoding tokens.
+     * @param sampler     The Sampler for sampling the next token based on logits.
+     * @param prompt      The input prompt to start the generation process.
+     * @param steps       The maximum number of steps (tokens) to generate.
+     */
+    static void generate(Transformer transformer, Tokenizer tokenizer, Sampler sampler, String prompt, int steps) {
+        String empty_prompt = "";
+        if (prompt == null) {
+            prompt = empty_prompt;
+        }
+
+        // encode the (string) prompt into tokens sequence
+        int num_prompt_tokens = 0; // the total number of prompt tokens
+        int[] prompt_tokens = new int[prompt.length() * 2 + 3]; // +3 for '\0', ?BOS, ?EOS
+        num_prompt_tokens = encode(tokenizer, prompt, true, false, prompt_tokens);
+        if (num_prompt_tokens < 1) {
+            System.err.println("something is wrong, expected at least 1 prompt token");
+            System.exit(1);
+        }
+
+        ArrayList<TornadoExecutionPlan> te = new ArrayList<>();
+
+        te.add(createTornadoExecutionPlan(transformer));
+
+        long start = 0; // used to time our code, only initialized after first iteration
+        int next; // will store the next token in the sequence
+        int token = prompt_tokens[0]; // kick off with the first token in the prompt
+        int pos = 0; // position in the sequence
+        while (pos < steps) {
+            // forward the transformer to get logits for the next token
+            float[] logits = InferenceEngine.forward(transformer, token, pos, te);
+
+            // Advance the state machine
+            next = (pos < num_prompt_tokens - 1) ? prompt_tokens[pos + 1] : sample(sampler, logits);
+            pos++;
+
+            // data-dependent terminating condition: the BOS (=1) token delimits sequences
+            if (next == 1) {
+                break;
+            }
+
+            // print the token as string, decode it with the Tokenizer object
+            String piece = decode(tokenizer, token, next);
+            safe_printf(piece);
+
+            System.out.flush();
+            token = next;
+
+            // init the timer here because the first iteration can be slower
+            if (start == 0) {
+                start = time_in_ms();
+            }
+        }
+
+        System.out.println();
+
+        // report achieved tok/s (pos-1 because the timer starts after first iteration)
+        if (pos > 1) {
+            long end = time_in_ms();
+            System.err.printf("\nachieved tok/s: %f\n", (pos - 1) / (double) (end - start) * 1000);
+        }
+    }
+
+    // ============= Chat =============
+
+    /**
+     * Reads a line from the stdin, up but not including the newline character.
+     *
+     * @param guide The prompt to display before reading the input.
+     * @return The line read from the standard input.
+     */
     static String read_stdin(String guide) {
-        // read a line from stdin, up to but not including \n
+        // read a line from stdin, up to but not including the newline character.
         System.out.print(guide);
         Scanner scanner = new Scanner(System.in);
         if (scanner.hasNextLine()) {
@@ -488,6 +514,17 @@ class Llama2 {
         return null;
     }
 
+    /**
+     * Simulates a chat conversation with the Transformer model using given prompts and system input.
+     * The conversation alternates between user and assistant turns until the specified number of steps is reached.
+     *
+     * @param transformer     The Transformer model used for generating responses.
+     * @param tokenizer       The Tokenizer for encoding and decoding text.
+     * @param sampler         The Sampler for sampling tokens based on logits.
+     * @param cli_user_prompt The optional user prompt provided via the command line.
+     * @param cli_system_prompt The optional system prompt provided via the command line.
+     * @param steps           The maximum number of conversation steps.
+     */
     static void chat(Transformer transformer, Tokenizer tokenizer, Sampler sampler, String cli_user_prompt, String cli_system_prompt, int steps) {
 
         // buffers for reading the system prompt and user prompt from stdin
@@ -502,7 +539,6 @@ class Llama2 {
         boolean user_turn = true; // user starts
         int next = 0; // will store the next token in the sequence
         int token = 0; // stores the current token to feed into the transformer
-        int prev_token;
         int pos = 0; // position in the sequence
         while (pos < steps) {
 
@@ -573,12 +609,9 @@ class Llama2 {
         System.out.println();
     }
 
-    // ----------------------------------------------------------------------------
-    // chat loop
-    // I manually inspected the tokens for a few chat conversations compared to
-    // python reference and that seemed ok, but this was not thoroughly tested and
-    // is not safely implemented, it's more a proof of concept atm.
-
+    /**
+     * Prints error messages and usage examples.
+     */
     static void error_usage() {
         System.err.println("Usage:   java Llama2 <checkpoint> [options]");
         System.err.println("Example: java Lamma2 model.bin -n 256 -i \"Once upon a time\"");
@@ -594,8 +627,6 @@ class Llama2 {
         System.exit(1);
     }
 
-    // ----------------------------------------------------------------------------
-
     public static void main(String[] args) throws IOException {
         // default parameters
         String checkpoint_path = null; // e.g. out/model.bin
@@ -608,8 +639,7 @@ class Llama2 {
         String mode = "generate"; // generate|chat
         String system_prompt = null; // the (optional) system prompt to use in chat mode
 
-        // poor man's C argparse so we can override the defaults above from the command
-        // line
+        // parsing of arguments to override the defaults above from the command
         if (args.length >= 1) {
             checkpoint_path = args[0];
         } else {
@@ -678,8 +708,4 @@ class Llama2 {
         }
     }
 
-    @FunctionalInterface
-    interface MatrixVectorFunction {
-        void apply(Object logits, Object xVector, Object weightInVector, int dim, int vocabSize);
-    }
 }
